# solo-agent

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.claude/: claude-code-mcp.json
evals/reports/: autograde_baseline_20260409.md  baseline_20260409.md  comparison_20260409.md  final_autograde_baseline.md  final_autograde_v2.md  final_evaluation_20260410.md  ft_dpo_attempt_20260410.md  multiturn_20260409.md  replan_20260409.md  structured_output_20260409.md
evals/sft_curated/: dpo_honesty.yaml  honesty.yaml  identity.yaml  unknown.yaml
evals/tasks/: baseline.yaml  chat_agent.yaml  multiturn.yaml  replan.yaml
models/: Modelfile.gemma3-sp  Modelfile.llama31-sp  Modelfile.swallow-dpo  Modelfile.swallow-sp
scripts/: dpo_train.py  qlora_train.py
src/agent/: __init__.py  main.py  mcp_server.py
src/agent/core/: chat_agent.py  executor.py  observer.py  planner.py  session.py  verifier.py
src/agent/eval/: chat_agent_eval.py  grader.py  multiturn.py  runner.py
src/agent/infra/: logger.py  retry.py  safety.py
src/agent/input/: base.py  text_adapter.py  vision_adapter.py  whisper_adapter.py
src/agent/llm/: base.py  ollama_client.py
src/agent/memory/: episodic.py  long_term.py  manager.py  rolling_summary.py  short_term.py
src/agent/tools/: base.py  code_executor.py  file_ops.py  memory_search.py  (+1 more)
tests/unit/: test_eval_loader.py  test_grader.py  test_mcp_server.py  test_memory.py  test_memory_search_tool.py  test_safety.py  test_sft_pipeline.py  test_tools.py  test_verifier.py  test_vision_adapter.py  test_whisper_adapter.py
(+8 files in other folders)
