[project]
name = "agent"
version = "0.1.0"
description = "Local LLM autonomous agent for WSL2 + NVIDIA GPU (Ollama backend)"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "flipper-works" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
